Pridal som názov, abstrakt, svoje údaje

--- a/clanok.tex
+++ b/clanok.tex
@@ -15,15 +15,15 @@
 
 \pagestyle{headings}
 
-\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
+\title{Dištančná výučba (Virtual Classroom) a dopad na výsledky študentov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2020/21, vedenie: Jozef Sitarčík}} % meno a priezvisko vyučujúceho na cvičeniach
 
-\author{Meno Priezvisko\\[2pt]
+\author{Ctibor Kovalčík\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
 	{\small Fakulta informatiky a informačných technológií}\\
 	{\small \texttt{...@stuba.sk}}
 	}
 
-\date{\small 30. september 2015} % upravte
+\date{\small 30. september 2020} % upravte
 
 
 
@@ -32,7 +32,7 @@
 \maketitle
 
 \begin{abstract}
-\ldots
+Vývoj počítačov a všetkej výpočtovej techniky sa v momentálnej dobe veľmi rýchlo vyvíja. Dôsledkom toho sa veľa sfér, odvetví snaží využívať čoraz viac online svet a všetky výhody s ním spojené. V tomto článku sa ale budem bližšie venovať konkrétne vzdelávaniu. Vzdelávanie tu vždy bolo, je aj bude je len otázkou v akej forme. Čas napredoval a v modernej dobe už máme tzv. online formu vzdelávania (E – Learning). Je to forma ktorá sa veľmi ujala ale nikto sa nepozerá na to aké má dôsledky. V Článok bude rozobraté či má táto forma potenciál aj ďalej a či sa výsledky študentov menia na základe formy vyučovania 
 \end{abstract}
 
 
